# pypasstime

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/pypasstime/: __init__.py  puzzle.py
