[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pypasstime.__version__"}

[project]
name = "pypasstime"
description = "Time lapse encryption program aimed to fight back social media addiction"
requires-python = ">=3.10.12"
readme = "README.md"

[tool.isort]
py_version = 310
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = ["pypasstime"]
known_local_folder = []
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
split_on_trailing_comma = true
lines_after_imports = 2
force_single_line = true
skip_glob = ["resources/*"]
filter_files = true

[tool.black]
target-version = ["py310"]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = true
force-exclude = """
/(
    | resources
)/
"""

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
extend-exclude = ["resources", "*.ipynb"]

[tool.ruff.lint]
select = ["F", "E", "I", "N", "NPY", "PD", "ERA", "RUF00", "RUF01", "Q", "G", "LOG", "C4", "B", "C90", "W"]
fixable = ["ALL"]
unfixable = []
preview = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = []
known-local-folder = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-locals = 15
max-statements = 50

[tool.ruff.lint.pep8-naming]
